Add it/en flags

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
               <section>
                 <header>
                   <p>
-                    <img alt="Language: <%= quote.language %>" src="http://www.residenzaleduetorri.it/images/flag_<%= quote.language %>.gif" width="12" height="12" /> 
+                    <img alt="Language: <%= quote.language %>" src="<%= @domain %>/images/flags/<%= quote.language %>.gif" width="12" height="12" /> 
                     From <a href="<%= @domain %>/source/<%= quote.source %>"><%= quote.source %></a> posted <%= quote.created_at.strftime(fmt='the %D at %R') %> (#<a href="<%= @domain %>/get/<%= quote.id %>"><%= quote.id %></a>)<br />
                     <img alt="Spacer" src="<%= @domain %>/images/spacer.gif" width="12" height="12" /> 
                     Tags: <i>
