--- a/views/partial/foot.erb
+++ b/views/partial/foot.erb
@@ -1,9 +1,22 @@
-      <footer>
-        <p><a href="https://github.com/RoxasShadow/Quotone" target="_blank">Quotone</a> (C) 2013</p>
+      <footer class="text-right" >
+        <p><small><a href="https://github.com/RoxasShadow/Quotone" target="_blank">Quotone</a> (C) 2013</small></p>
       </footer>
       
-      </div>
     </div>
+
+    <script src="<%= @domain %>/bootstrap/js/jquery.js"></script>
+    <script src="<%= @domain %>/bootstrap/js/bootstrap-transition.js"></script>
+    <script src="<%= @domain %>/bootstrap/js/bootstrap-alert.js"></script>
+    <script src="<%= @domain %>/bootstrap/js/bootstrap-modal.js"></script>
+    <script src="<%= @domain %>/bootstrap/js/bootstrap-dropdown.js"></script>
+    <script src="<%= @domain %>/bootstrap/js/bootstrap-scrollspy.js"></script>
+    <script src="<%= @domain %>/bootstrap/js/bootstrap-tab.js"></script>
+    <script src="<%= @domain %>/bootstrap/js/bootstrap-tooltip.js"></script>
+    <script src="<%= @domain %>/bootstrap/js/bootstrap-popover.js"></script>
+    <script src="<%= @domain %>/bootstrap/js/bootstrap-button.js"></script>
+    <script src="<%= @domain %>/bootstrap/js/bootstrap-collapse.js"></script>
+    <script src="<%= @domain %>/bootstrap/js/bootstrap-carousel.js"></script>
+    <script src="<%= @domain %>/bootstrap/js/bootstrap-typeahead.js"></script>
     
     <script type="text/javascript">
       window.___gcfg = {lang: '<%= @language %>'};
