--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,111 +1,35 @@
-* {
-	padding: 0;
-	margin: 0;
-}
-
-nav {
-  text-align: center;
-}
-
-nav a, nav a:visited {
-  color: #0a0a0a;
-  font-size:small;
-  text-decoration: none;
-}
-
-nav a:hover {
-  text-decoration: underline;
-}
-
 body {
-	background: #0a0a0a;
-	color: #ffffff;
-	font-size: 16px;
-	font-family: "lucida grande","Meiryo",tahoma,verdana,arial,sans-serif;
-	height: 100%;
+  padding-bottom: 40px;
+  background-color: #2e3436;
 }
 
-#body {
-	position: absolute;
-	width: 620px;
-	left: 50%;
-	margin-left: -310px;
-	height: 100%;
+.main {
+  max-width: 620px;
+  padding: 19px 29px 29px;
+  margin: 0 auto 20px;
+  background-color: #efefef;
+  border: 1px solid #e5e5e5;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
 }
 
-#contents {
-	color: #8a8a8a;
-	width: 100%;
-	min-height: 100px;
-  border-radius: 15px 15px 15px 15px;
-  position: absolute;
-  top: 50%;
-  margin-top: -400px;
+.form {
+  max-width: 620px;
+  padding: 19px 29px 29px;
+  margin: 0 auto 20px;
+  background-color: #efefef;
+  border: 1px solid #e5e5e5;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
 }
 
-#logo {
-  background-image: url('../images/logo.png');
-  width: 397px;
-  height: 76px;
-  position: absolute;
-  top: 50%;
-  margin-top: -480px;
-  text-align:center;
+.form .form-heading, .form .checkbox {
+  margin-bottom: 10px;
 }
 
-.header {
-	background: #efefef;
-	color: #0a0a0a;
-	padding: 20px;
-	margin: 0 0 50px 0;
-	border-radius: 0 0 13px 13px;
-}
-
-section {
-  width: 92%;
-  color: #fff;
-  float: left;
-  clear: left;
-  padding: 15px 20px;
-  margin-bottom:2px;
-  border-radius: 13px;
-  border: 4px #fff solid;
-  background: transparent url('../images/gray.png') repeat-x left center;
-}
-
-header a, header a:visited {
-  color: #fff;
-  text-decoration: none;
-}
-
-article {
-  margin-top: 2px;
-}
-
-section footer {
-  padding-top: 10px;
-}
-
-#pagination p {
-  text-align: center;
-  margin-bottom: 6px;
-}
-
-#pagination p a, #pagination p a:visited {
-  color: #000;
-  text-decoration: none;
-}
-
-footer p {
-  font-size: small;
-  text-align: center;
-}
-
-footer a, footer a:visited {
-  color: #8a8a8a;
-  text-decoration: underline;
-}
-
-a:hover {
-  text-decoration: none;
+.form input[type="text"], .form input[type="password"] {
+  font-size: 16px;
+  height: auto;
+  margin-bottom: 15px;
+  padding: 7px 9px;
 }
