--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ body {
   background-color: #2e3436;
 }
 
-.main {
+.main, section {
   max-width: 620px;
   padding: 19px 29px 29px;
   margin: 0 auto 20px;
