Delete unused bootstrap files

--- a/views/partial/head.erb
+++ b/views/partial/head.erb
@@ -3,9 +3,9 @@
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <title><% if @title %><%= @title %> | <% end %>Quotone</title>
-    <link href="<%= @domain %>/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="<%= @domain %>/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="<%= @domain %>/css/style.css" rel="stylesheet" />
-    <link href="<%= @domain %>/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
+    <link href="<%= @domain %>/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" />
     <% if @current_page == ?/ %><meta name="description" content="The place where you can share anonymously your favorite quotes from anime, manga, videogames, books, etc." /><% end %>
     <meta name="robots" content="index,follow" />
   </head>
