--- a/views/partial/head.erb
+++ b/views/partial/head.erb
@@ -12,6 +12,15 @@
   
   <body>
   
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/it_IT/all.js#xfbml=1&appId=133510783352689";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+  
     <div class="text-center">
       <img src="http://www.quotone.unsigned.it/images/logo.png" width="397" height="76" />
     </div>
