Change style to Facebook button

--- a/views/index.erb
+++ b/views/index.erb
@@ -27,7 +27,7 @@
                   </p>
                 </article>
                 <footer>
-                  <div class="fb-like" data-href="<%= @domain %>/get/<%= quote.id %>" data-send="false" data-width="100" data-show-faces="false"></div>
+                  <div class="fb-like" data-href="<%= @domain %>/get/<%= quote.id %>" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
                   
                   <div class="g-plusone" data-size="medium" data-annotation="none" data-href="<%= @domain %>/get/<%= quote.id %>"></div>
                   
