--- a/views/partial/foot.erb
+++ b/views/partial/foot.erb
@@ -3,6 +3,8 @@
       </footer>
       
     </div>
+
+    <script type="text/javascript" src="<%= @domain %>/javascript/sharrre.js"></script>
     
   </body>
 </html>
