--- a/views/partial/head.erb
+++ b/views/partial/head.erb
@@ -3,21 +3,24 @@
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <title><% if @title %><%= @title %> | <% else %><% if @quotes.one? %><%= @quotes.first.quote[0..50] %>... | <% end %><% end %>Quotone</title>
-    <link href="<%= @domain %>/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="<%= @domain %>/css/style.css" rel="stylesheet" />
+    
+    <link href="<%= @domain %>/bootstrap/css/bootstrap.min.css"            rel="stylesheet" />
     <link href="<%= @domain %>/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" />
+    <link href="<%= @domain %>/css/style.css"                              rel="stylesheet" />
+    <link href="<%= @domain %>/css/sharrre.css"                            rel="stylesheet" />
+    
     <meta name="description" content="<% if @quotes.one? %><%= @quotes.first.quote[0..300] %><% else %>The place where you can share anonymously your favorite quotes from anime, manga, videogames, books, etc.<% end %>" />
-    <meta name="robots" content="index,follow" />
+    <meta name="robots"      content="index,follow" />
 
-    <meta property="og:title" content="<% if @title %><%= @title %> | <% else %><% if @quotes.one? %><%= @quotes.first.quote[0..50] %>... | <% end %><% end %>Quotone" />
-    <meta property="og:url" content="<%= @current_url %>"/>
-    <meta property="og:site_name" content="Quotone"/>
-    <meta property="og:type" content="blog" />
-    <meta property="og:image" content="<%= @domain %>/images/logo.png" />
+    <meta property="og:title"       content="<% if @title %><%= @title %> | <% else %><% if @quotes.one? %><%= @quotes.first.quote[0..50] %>... | <% end %><% end %>Quotone" />
+    <meta property="og:url"         content="<%= @current_url %>"/>
+    <meta property="og:site_name"   content="Quotone"/>
+    <meta property="og:type"        content="blog" />
+    <meta property="og:image"       content="<%= @domain %>/images/logo.png" />
     <meta property="og:description" content="<% if @quotes.one? %><%= @quotes.first.quote[0..300] %><% else %>The place where you can share anonymously your favorite quotes from anime, manga, videogames, books, etc.<% end %>" />
     
-    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-    <script type="text/javascript">stLight.options({publisher: "343c72a8-1055-4ffd-a8b8-69e29aab9e79"});</script>
+    <script type="text/javascript" src="<%= @domain %>/javascript/jquery.js"></script>
+    <script type="text/javascript" src="<%= @domain %>/javascript/jquery.sharrre.js"></script>
   </head>
   
   <body>  
