Add quote moderation

--- a/views/error.erb
+++ b/views/error.erb
@@ -1,5 +1,5 @@
 <%= erb :'partial/head' %>
       
-        <p>Error: <%= @error %>
+        <p>Error: <%= @error %></p>
         
 <%= erb :'partial/foot' %>
