--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <%= erb :'partial/head' %>
-      
+
         <% if @quotes.any? %>
           <% @quotes.each_with_index { |quote, i| %>
             <% if i <= 5 %>
@@ -7,7 +7,7 @@
                 <header>
                   <p>
                     <img alt="Language: <%= quote.language %>" src="<%= @domain %>/images/flags/<%= quote.language %>.gif" width="12" height="12" /> 
-                    From <a href="<%= @domain %>/source/<%= quote.source %>"><%= quote.source %></a> posted <%= quote.created_at.strftime('the %d/%m/%Y at %H:%M:%S') %> (#<a href="<%= @domain %>/get/<%= quote.id %>"><%= quote.id %></a> | <a href="<%= @domain %>/vote/<%= quote.id %>"><%= quote.n_votes %> votes</a>)<br />
+                    From <a href="<%= @domain %>/source/<%= quote.source %>"><%= quote.source %></a> posted <%= quote.created_at.strftime('the %d/%m/%Y at %H:%M:%S') %> (#<a href="<%= @domain %>/get/<%= quote.id %>"><%= quote.id %></a> | <a href="<%= @domain %>/vote/<%= quote.id %>"><%= quote.n_votes %> votes</a>) <% if admin? %><a href="<%= @domain %>/delete/<%= quote.id %>">Delete</a><% end %><br />
                     <img alt="Spacer" src="<%= @domain %>/images/spacer.gif" width="12" height="12" /> 
                     <% if quote.tags.split(/,/).any? %>
                       Tags: <i>
