--- a/views/new.erb
+++ b/views/new.erb
@@ -10,7 +10,7 @@
         <form action="" method="post" class="form">
           <input type="text" class="input-block-level" name="source" placeholder="Source" />
           <input type="text" class="input-block-level" name="tags" placeholder="Tags" title="Divide each tag by a comma (,)" />
-          <textarea class="input-block-level" name="quote" rows="10"></textarea>
+          <textarea class="input-block-level" name="quote" data-widearea="enable"></textarea>
           <%= csrf_tag %>
           <input type="submit" class="btn btn-medium" value="Send" />
         </form>
