--- a/views/partial/foot.erb
+++ b/views/partial/foot.erb
@@ -5,6 +5,6 @@
     </div>
 
     <script type="text/javascript" src="<%= @domain %>/javascript/sharrre.js"></script>
-    
+    <script type="text/javascript">wideArea();</script>
   </body>
 </html>
