Admin can edit quotes

--- a/views/new.erb
+++ b/views/new.erb
@@ -4,13 +4,11 @@
         <p>Quote sent.</p>
       <% elsif @output == 'fail' %>
         <p>Error sending the quote: <%= @errors.first.first %></p>
-      <% elsif @output == 'duplicate' %>
-        <p>Error sending the quote: Username not available.</p>
       <% else %>
-        <form action="" method="post" class="form">
-          <input type="text" class="input-block-level" name="source" placeholder="Source" />
-          <input type="text" class="input-block-level" name="tags" placeholder="Tags" title="Divide each tag by a comma (,)" />
-          <textarea class="input-block-level" name="quote" data-widearea="enable"></textarea>
+        <form action="<%= @current_url %>" method="post" class="form">
+          <input type="text" class="input-block-level" name="source" placeholder="Source" value="<%= @quote.source if @quote %>" />
+          <input type="text" class="input-block-level" name="tags"   placeholder="Tags"   title="Divide each tag by a comma (,)" value="<%= @quote.tags if @quote %>" />
+          <textarea          class="input-block-level" name="quote"  placeholder="Quote"  data-widearea="enable" rows="10"><%= @quote.quote if @quote %></textarea>
           <%= csrf_tag %>
           <input type="submit" class="btn btn-medium" value="Send" />
         </form>
