--- a/views/partial/head.erb
+++ b/views/partial/head.erb
@@ -10,7 +10,7 @@
     <link href="<%= @domain %>/css/sharrre.css"                            rel="stylesheet" />
     <link href="<%= @domain %>/css/widearea.css"                            rel="stylesheet" />
     
-    <meta name="description" content="<% if @quotes.one? %><%= @quotes.first.quote[0..300] %><% else %>The place where you can share anonymously your favorite quotes from anime, manga, videogames, books, etc.<% end %>" />
+    <meta name="description" content="<% if @quotes.one? %><%= @quotes.first.quote[0..300] %><% else %>Quotone allows you to share with the world your favorite quotes from novels, movies, anime, manga, comics, videogames and so on in a completely anonimous way without any type of registration.<% end %>" />
     <meta name="robots"      content="index,follow" />
 
     <meta property="og:title"       content="<% if @title %><%= @title %> | <% else %><% if @quotes.one? %><%= @quotes.first.quote[0..50] %>... | <% end %><% end %>Quotone" />
@@ -18,7 +18,7 @@
     <meta property="og:site_name"   content="Quotone"/>
     <meta property="og:type"        content="blog" />
     <meta property="og:image"       content="<%= @domain %>/images/logo.png" />
-    <meta property="og:description" content="<% if @quotes.one? %><%= @quotes.first.quote[0..300] %><% else %>The place where you can share anonymously your favorite quotes from anime, manga, videogames, books, etc.<% end %>" />
+    <meta property="og:description" content="<% if @quotes.one? %><%= @quotes.first.quote[0..300] %><% else %>Quotone allows you to share with the world your favorite quotes from novels, movies, anime, manga, comics, videogames and so on in a completely anonimous way without any type of registration.<% end %>" />
     
     <script type="text/javascript" src="<%= @domain %>/javascript/jquery.js"></script>
     <script type="text/javascript" src="<%= @domain %>/javascript/jquery.sharrre.js"></script>
