--- a/views/index.erb
+++ b/views/index.erb
@@ -27,7 +27,7 @@
                   </p>
                 </article>
                 <footer class="share">
-                    <div class="shareme" data-url="<%= @domain %>/get/<%= quote.id %>" data-text="<%= quote.quote[0..117] %>"></div>
+                    <div class="shareme" data-url="<%= @domain %>/get/<%= quote.id %>" data-text="<%= quote.quote[0..109] %> [...]"></div>
                 </footer>
               </section>
             <% end %>
