--- a/views/new.erb
+++ b/views/new.erb
@@ -10,7 +10,7 @@
           <input type=text class="input-block-level"   name="tags"   placeholder="Tags"   value="<%= @quote.tags if @quote %>" title="Divide each tag by a comma (,)" />
           <textarea        class="input-block-level"   name="quote"  placeholder="Quote"  data-widearea="enable" rows="10"><%= @quote.quote if @quote %></textarea>
           <%= csrf_tag %>
-          <input type="submit" class="btn btn-medium" value="Send" />
+          <input type=submit class="btn btn-medium" value="Send" />
         </form>
       <% end %>
         
