Replace spaces with %20 in the views

--- a/views/partial/head.erb
+++ b/views/partial/head.erb
@@ -27,7 +27,7 @@
   
   <body>  
     <div class="text-center">
-      <img src="<%= @domain %>/images/logo.png" width="397" height="76" />
+      <img src="<%= @domain %>/images/logo.png" width="397" height="76" alt="Quotone" />
     </div>
     
     <div class="container main">
