--- a/views/partial/head.erb
+++ b/views/partial/head.erb
@@ -14,10 +14,10 @@
     <meta name="robots"      content="index,follow" />
 
     <meta property="og:title"       content="<% if @title %><%= @title %> | <% else %><% if @quotes.one? %><%= @quotes.first.quote[0..50] %>... | <% end %><% end %>Quotone" />
-    <meta property="og:url"         content="<%= @current_url %>"/>
-    <meta property="og:site_name"   content="Quotone"/>
+    <meta property="og:url"         content="<%= @current_url %>" />
+    <meta property="og:site_name"   content="Quotone" />
     <meta property="og:type"        content="blog" />
-    <meta property="og:image"       content="<%= @domain %>/images/logo.png" />
+    <meta property="og:image"       content="<% if @quotes.one? %><%= get_thumbnail(@quotes.first.tags) %><% else %><%= @domain %>/images/logo.png<% end %>" />
     <meta property="og:description" content="<% if @quotes.one? %><%= @quotes.first.quote[0..300] %><% else %>Quotone allows you to share with the world your favorite quotes from novels, movies, anime, manga, comics, videogames and so on in a completely anonimous way without any type of registration.<% end %>" />
     
     <script type="text/javascript" src="<%= @domain %>/javascript/jquery.js"></script>
